force-app/main/default/objects/pse__Rate_Card__c/pse__Rate_Card__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RateCardHelp</customHelpPage>
    <description>Records the suggested bill rate or average cost rate for a resource role in a region, practice, or group (for example, the bill rate for a Consultant in Europe) or for projects on an account. Use rate cards early in the staffing process, to provide information on likely billing and cost rates when creating resource requests. If configured, start and end dates on rate cards determine if the rate only applies to resource requests which lie between the given dates.</description>
    <label>Rate Card</label>
    <nameField>
        <displayFormat>RC-{0}</displayFormat>
        <label>Rate Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>