force-app/main/default/objects/pse__Rate_Card__c/fields/pse__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date__c</fullName>
    <description>The rate card will no longer be applied after the date entered here. If you enter an end date, you must also enter a start date. If there is a start date and no end date, the rate card will be applied.</description>
    <inlineHelpText>The rate card will no longer be applied after the date entered here. If you enter an end date, you must also enter a start date. If there is a start date and no end date, the rate card will be applied.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>