force-app/main/default/objects/pse__Rate_Card__c/fields/pse__Suggested_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Suggested_Bill_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Suggested Bill Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>