force-app/main/default/objects/pse__Rate_Card__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Role__c</columns>
    <columns>pse__Suggested_Bill_Rate__c</columns>
    <columns>pse__Average_Cost_Rate__c</columns>
    <columns>pse__Cascading_Role__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>